apps/base/registry/registry-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  namespace: registry
