apps/base/registry/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert -n registry
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: registry
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: registry
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.yaml convert -n registry
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: registry
    spec:
      containers:
        - image: registry:2
          name: registry
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/registry
              name: registry
      restartPolicy: Always
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
