apps/base/registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert -n registry
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: registry
  name: registry
  namespace: registry
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 5000
  selector:
    io.kompose.service: registry
