apps/base/registry/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  ingressClassName: tailscale
  rules:
  - host: registry
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: registry
            port: 
              number: 80
  tls:
  - hosts:
    - registry
